# zit-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
src/: config.py  exceptions.py  logger.py  main.py
src/application/domain/: product.py
src/application/services/: product_service.py
src/infrastructure/database/: database.py  models.py
src/infrastructure/database/dao/: product_dao.py  product_type.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 95be9e07b4ff_initial.py
src/presentation/api/products/: router.py  schemas.py
tests/: conftest.py  mock_product_types.json  mock_products.json
tests/unit/: test_products.py
